# thankloganforserving.us

./: .gitignore  README.md  pylintrc  send_texts  setup.cfg  setup.py
tests/: test_thanked_today.py
thankloganforserving/: manage.py
thankloganforserving/polls/: models.py  views.py
thankloganforserving/polls/migrations/: 0001_initial.py
thankloganforserving/thank_logan/: admin.py  apps.py  models.py  urls.py  views.py
thankloganforserving/thank_logan/management/commands/: text_logan.py
thankloganforserving/thank_logan/migrations/: 0001_initial.py  0002_auto_20200229_0002.py  0003_smsqueue.py  0004_auto_20200306_2235.py
thankloganforserving/thank_logan/static/thank_logan/: style.css
thankloganforserving/thank_logan/templates/thank_logan/: index.html
thankloganforserving/thankloganforserving/: asgi.py  settings.py  urls.py  wsgi.py
