[metadata]
name = thank_logan_for_serving
description = ThankLoganForServing.us website code
version = 0.0.1
url = https://github.com/caverage/thankloganforserving.us
keywords =
  service
classifiers =
  Development Status :: 1 - Planning
  Framework :: Django
  Intended Audience :: End Users/Desktop
  License :: OSI Approved :: GNU Affero General Public License v3
  Natural Language :: English
  Programming Language :: Python :: 3.7
  Operating System :: POSIX :: Linux
  Topic :: Internet :: WWW/HTTP :: WSGI :: Application
  Typing :: Typed
long_description = file: README.md
long_description_content_type = text/markdown
license_files =
  LICENSE.txt

[options]
python_requires = ~=3.6
setup_requires =
  setuptools >= 40.6
  pip >= 10
packages = find:
zip_safe: false
scripts =
install_requires =
  wheel
  django
  requests

[options.extras_require]
tests =
  pytest
  pytest-cov
  black
  pylint
  pylint-django
  mypy
  isort

[coverage:run]
branch = True

[coverage:report]
show_missing = True

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88

# Global options:

[mypy]
python_version = 3.7
warn_unused_configs = True
warn_redundant_casts = True

# Per-module options:
[mypy-thank_logan_for_serving.*]
disallow_any_unimported = False
disallow_any_decorated = True
disallow_any_generics = True
disallow_subclassing_any = False
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
warn_return_any = True
warn_unused_ignores = True
no_implicit_optional = True
strict_optional = True

[mypy-tests.*]
ignore_errors = True

[mypy-django.*]
ignore_missing_imports = True
